Fix overflow for larger images

--- a/app/assets/stylesheets/components/shop/_shop.scss
+++ b/app/assets/stylesheets/components/shop/_shop.scss
@@ -23,6 +23,7 @@
       .productDisplay {
         height: 350px;
         width: 300px;
+        overflow: hidden;
         display: flex;
         justify-content: center;
         align-items: center;
